--- a/Frontend Mentor/Contact Form/style.css
+++ b/Frontend Mentor/Contact Form/style.css
@@ -2,8 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html, body {
@@ -11,15 +10,15 @@ html, body {
 }
 
 body {
-  background-color: #dff1e7;
+  background-color: hsl(148, 38%, 91%);
   font-family: "Karla", sans-serif;
-  color: #2b4246;
+  color: hsl(187, 24%, 22%);
   padding: 5%;
 }
 
 #form-container {
   background-color: #fff;
-  border-radius: .8em;
+  border-radius: 0.8em;
   padding: 6%;
   margin-bottom: 1em;
 }
@@ -29,60 +28,50 @@ h1 {
 }
 
 form {
-  font-size: .9em;
-  display: -ms-grid;
+  font-size: 0.9em;
   display: grid;
 }
-
 form label {
   display: inline-block;
-  margin-bottom: .8em;
+  margin-bottom: 0.8em;
 }
 
 .bordered {
   display: block;
-  border: solid 1px rgba(43, 66, 70, 0.5);
-  border-radius: .5em;
+  border: solid 1px hsla(187, 24%, 22%, 0.5);
+  border-radius: 0.5em;
   width: 100%;
   height: 3.5em;
   padding: 1em;
-  margin-bottom: .8em;
+  margin-bottom: 0.8em;
 }
-
 .bordered:focus, .bordered:hover {
   outline: none;
-  border: solid 1px #0c7d69;
+  border: solid 1px hsl(169, 82%, 27%);
 }
 
 .multi-field-container {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .field {
-  margin-bottom: .8em;
+  margin-bottom: 0.8em;
   width: 100%;
 }
 
 .input-label-group {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
+}
+.input-label-group:has(input[type=radio]:checked) {
+  background-color: hsl(148, 38%, 91%);
 }
 
 .consent {
   margin: 1.2em 0 2.3em 0;
 }
-
 .consent label {
   margin: 0;
 }
@@ -93,41 +82,30 @@ form label {
 
 fieldset {
   border: none;
-  margin-bottom: .8em;
+  margin-bottom: 0.8em;
 }
-
 fieldset legend {
-  margin-bottom: .8em;
+  margin-bottom: 0.8em;
 }
-
 fieldset .bordered {
   padding: 0;
 }
-
 fieldset input, fieldset label {
   margin-bottom: 0;
 }
-
 fieldset label {
-  margin-left: .8em;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  margin-left: 0.8em;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  align-items: center;
+  flex: 1;
   height: 100%;
 }
-
 fieldset .error-msg {
   margin: 0;
 }
 
 input {
-  color: #2b4246;
+  color: hsl(187, 24%, 22%);
   cursor: pointer;
 }
 
@@ -139,28 +117,24 @@ input[type=radio] {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  display: -ms-grid;
   display: grid;
   place-content: center;
   margin-left: 1em;
   height: 1.2em;
   width: 1.2em;
-  border: 1px solid rgba(135, 163, 166, 0.5);
+  border: 1px solid hsla(186, 15%, 59%, 0.5);
   border-radius: 50%;
 }
-
 input[type=radio]:checked {
-  border: 2px solid #0c7d69;
+  border: 2px solid hsl(169, 82%, 27%);
 }
-
 input[type=radio]:checked::before {
   display: block;
-  content: '';
-  height: .6em;
-  width: .6em;
+  content: "";
+  height: 0.6em;
+  width: 0.6em;
   border-radius: 50%;
-  -webkit-box-shadow: inset 1em 1em #0c7d69;
-          box-shadow: inset 1em 1em #0c7d69;
+  box-shadow: inset 1em 1em hsl(169, 82%, 27%);
 }
 
 input[type=checkbox] {
@@ -168,25 +142,22 @@ input[type=checkbox] {
      -moz-appearance: none;
           appearance: none;
   position: relative;
-  margin-right: .8em;
-  display: -ms-grid;
+  margin-right: 0.8em;
   display: grid;
   place-content: center;
   height: 1em;
   width: 1em;
-  border: 1px solid rgba(43, 66, 70, 0.6);
-  border-radius: .1em;
+  border: 1px solid hsla(187, 24%, 22%, 0.6);
+  border-radius: 0.1em;
 }
-
 input[type=checkbox]:checked {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
 }
-
 input[type=checkbox]:checked::before {
   position: absolute;
-  content: '';
+  content: "";
   background: url(/assets/images/icon-checkbox-check.svg) center/cover no-repeat;
   height: 1em;
   width: 1em;
@@ -196,36 +167,35 @@ input[type=checkbox]:checked::before {
 
 textarea {
   font-family: "Karla", sans-serif;
-  color: #2b4246;
+  color: hsl(187, 24%, 22%);
   resize: vertical;
 }
 
 .required::after {
-  content: '*';
-  color: #0c7d69;
-  margin-left: .3em;
+  content: "*";
+  color: hsl(169, 82%, 27%);
+  margin-left: 0.3em;
 }
 
 input[type=submit] {
-  background-color: #0c7d69;
+  background-color: hsl(169, 82%, 27%);
   border: none;
-  border-radius: .5em;
+  border-radius: 0.5em;
   width: 100%;
   height: 3.2em;
   color: #fff;
   font-size: 1.2em;
   font-weight: 400;
-  letter-spacing: .05em;
+  letter-spacing: 0.05em;
 }
-
 input[type=submit]:hover {
-  background-color: #0a3d36;
+  background-color: hsl(171, 72%, 14%);
 }
 
 .error-msg {
   display: none;
-  color: #d94545;
-  margin-top: .8em;
+  color: hsl(0, 66%, 56%);
+  margin-top: 0.8em;
 }
 
 #success-msg {
@@ -236,9 +206,8 @@ input[type=submit]:hover {
   font-size: 11px;
   text-align: center;
 }
-
 .attribution a {
-  color: #0c7d69;
+  color: hsl(169, 82%, 27%);
   text-decoration: none;
 }
 
@@ -251,15 +220,12 @@ input[type=submit]:hover {
     margin-bottom: 1em;
   }
   form {
-    font-size: .9em;
+    font-size: 0.9em;
   }
   .multi-field-container {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-column-gap: 1em;
-            column-gap: 1em;
+    flex-direction: row;
+    -moz-column-gap: 1em;
+         column-gap: 1em;
   }
   .message {
     height: 7.5em;
@@ -268,8 +234,8 @@ input[type=submit]:hover {
   footer {
     position: absolute;
     bottom: 0;
+    margin-bottom: 1em;
     left: 50%;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
+    transform: translateX(-50%);
   }
 }
