--- a/Frontend Mentor/Contact Form/style.scss
+++ b/Frontend Mentor/Contact Form/style.scss
@@ -68,6 +68,10 @@ form {
 .input-label-group {
     display: flex;
     align-items: center;
+
+    &:has(input[type=radio]:checked){
+        background-color: hsl(148, 38%, 91%);;
+    }
 }
 
 .consent  {
@@ -123,6 +127,7 @@ input {
 label {
     cursor: pointer;
 }
+
 
 input[type=radio] {
     appearance: none;
@@ -255,6 +260,7 @@ input[type=submit] {
     footer {
         position: absolute;
         bottom: 0;
+        margin-bottom: 1em;
         left: 50%;
         transform: translateX(-50%);
     }
